# BrewLog

./: .gitignore  PROJECT_OVERVIEW.md  README.md  SETUP_GUIDE.md  build.sh  build_android.sh  local.properties  run.sh  setup.sh
.github/workflows/: ci.yml  main.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: brewlog-release-key.jks  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/brewlog/android/: BeerEntry.kt  BeerEntryAdapter.kt  BeerGlassView.kt  BeerTracker.kt  BrewLog.kt  BrewLogApplication.kt  BrewLogNative.kt  BrewLogProvider.kt  CalendarActivity.kt  DrinkManagerAdapter.kt  (+4 more)
android/app/src/main/res/drawable/: ic_circle_background.xml  marker_background.xml
android/app/src/main/res/layout/: activity_calendar.xml  activity_main.xml  activity_progress.xml  activity_settings.xml  bottom_sheet_favorite_setup.xml  bottom_sheet_quick_add.xml  dialog_add_beer.xml  dialog_drink_manager.xml  dialog_progress_metrics.xml  dialog_set_baseline.xml  dialog_set_goals.xml  dialog_settings.xml  dialog_setup.xml  dialog_welcome_setup.xml  item_beer_entry.xml  item_drink.xml  marker_view.xml
android/app/src/main/res/menu/: menu_bottom.xml  menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
rust/: Cargo.toml
rust/src/: lib.rs
(+1 files in other folders)
