[package]
name = "beer-tracker-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "beer_tracker_core"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0" 