[package]
name = "brewlog-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "brewlog_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5" 